travis run this another please

--- a/tox.ini
+++ b/tox.ini
@@ -25,7 +25,7 @@ deps =
 [testenv:isort]
 basepython = python2.7
 #commands = isort --check-only --recursive --diff --atomic \{\{cookiecutter.repo_name\}\}/
-commands = isort --check-only --recursive \{\{cookiecutter.repo_name\}\}/
+commands = isort --check-only --recursive {{cookiecutter.repo_name}}/
 deps = https://github.com/timothycrosley/isort/archive/develop.zip
 
 
