--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: false
 install:
   - pip install -r requirements.txt
   - pip install cookiecutter
-  - gem install heroku
+  - wget -qO- https://toolbelt.heroku.com/install.sh | sh
 script:
   - py.test
 
