--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: python
-sudo: false
+#sudo: false
 install:
   - pip install -r requirements.txt
   - pip install cookiecutter
-  - wget -qO- https://toolbelt.heroku.com/install.sh | sh
+  - wget https://toolbelt.heroku.com/install-ubuntu.sh
+  - chmod +x install-ubuntu.sh
+  - sudo ./install-ubuntu.sh
 script:
   - py.test
 
