--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ deploy:
   api_key: $HEROKU_API_KEY
   strategy: api
   on: testdeploy2
-#  buildpack: python
+  buildpack: python
   
 after_deploy:
   - popd
