--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: python
-sudo: false
-
+#sudo: false
 install:
-- pip install -r requirements.txt
-
+  - pip install -r requirements.txt
+  - pip install cookiecutter
+  - wget https://toolbelt.heroku.com/install-ubuntu.sh
+  - chmod +x install-ubuntu.sh
+  - sudo ./install-ubuntu.sh
 script:
   - py.test
 
@@ -11,3 +13,7 @@ notifications:
   email:
     on_success: change
     on_failure: always
+
+after_success:
+    - ./deploy_by_travis.sh
+
